--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "episerver-vue-2",
+  "name": "vue-wc-async-poc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --target wc-async --name v-app src/components/**/*.vue",
-    "serve-folder": "npm i -g serve && serve -s dist",
+    "serve": "npm i -g serve && serve -s dist",
     "build": "vue-cli-service build --target wc-async --name v-app src/components/**/*.vue",
-    "watch": "vue-cli-service build --watch --no-clean --target wc-async --name v-app src/components/**/*.vue",
+    "watch": "vue-cli-service build --watch --no-clean --report --mode development --target wc-async --name v-app src/components/**/*.vue",
     "publish": "npm run build && npm run copy-dist",
-    "lint": "vue-cli-service lint",
-    "copy-dist": "robocopy dist ../EpiserverSite1/EpiserverSite1/Static/js/dist /e /is /it & IF %ERRORLEVEL% LEQ 1 exit 0"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
